API docs: added game, avatar, static resources; fixed summary and description fields
